@@ -7,7 +7,7 @@ Uploaders: Michael Meskes <meskes@debian.org>,
 Build-Depends: bcc,
                bzip2,
                chrpath,
-               debhelper (>= 6.0.7~),
+               debhelper (>= 7.2.7~),
                docbook-xml,
                docbook-xsl,
                g++-multilib [amd64],
@@ -43,7 +43,7 @@ Build-Depends: bcc,
                libxrender-dev,
                libxslt1-dev,
                lynx-cur,
-               python-central,
+               python-central (>= 0.6.7~),
                python-dev (>= 2.4),
                quilt (>= 0.46-7~),
                uuid-dev,
